--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <body>
         <h1> 
             Welcome to my page!</h1>
-            <p>I'm very  excited to be learning WebDev!
-            </p>
+            <a href="https://github.com/MarieDeMey">
+                <img src="assets/css/desktop-monitor.svg">
+            </a>
+            <p>I'm very  excited to be learning WebDev!</p>
     </body>
 </html>
