--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <a href="https://github.com/MarieDeMey">
             <img src="assets/css/desktop-monitor.svg">
         </a>
-            <p>I'm very  excited to be learning WebDev!</p>
+            <p>I'm very  excited to be lfajaarning WebDev!</p>
     </body>
 </html>
