--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Marie De Mey</title>
 
     <body>
-        <h1>Please Fucking Hire Me!</h1>
+        <h1>Welcome to my page :)</h1>
         <a href="https://github.com/MarieDeMey">
             <img src="assets/css/desktop-monitor.svg">
         </a>
-            <p>I'm very desperate!</p>
+            <p>Ps: this is my first ever page!</p>
     </body>
 </html>
